# mjview

./: .eslintrc.json  .gitignore  235.js  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yml  deploy.yml
css/: index.css
image/paiga/: LICENSE.md
js/: index.js  mahjong_furo.js  mahjong_hai.js  mahjong_tehai.js
src/: agari.rs  agari_hai.rs  agari_type.rs  env.rs  furo.rs  hai.rs  hai_builder.rs  hai_category.rs  hai_image.rs  hai_vec.rs  hai_with_attr.rs  jun_tehai.rs  kotsu_candidates.rs  lib.rs  machi.rs  machi_combinations.rs  macros.rs  mentsu.rs  mentsu_combinations.rs  rank.rs  shuntsu_candidates.rs  tacha.rs  tehai.rs  toitsu_candidates.rs  yaku.rs
src/yaku/: common.rs  dora.rs  fan1.rs  fan2.rs  fan3.rs  fan6.rs  mod.rs  yakuman.rs
static/: index.html
static/css/: index.css
static/image/paiga/: LICENSE
tests/: app.rs
tool/: download_paiga
