[package]
authors = ["gifnksm <makoto.nksm+git@gmail.com>"]
categories = ["wasm"]
description = "Mahjang Tehai Viewer"
edition = "2018"
name = "mjview"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
enum-iterator = "0.7.0"
enumflags2 = "0.7.1"
js-sys = "0.3.55"
num-bigint = "0.4.2"
thiserror = "1.0.29"
wasm-bindgen = "0.2.78"
wee_alloc = { version = "0.4.5", optional = true }

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[dev-dependencies]
assert_matches = "1.5.0"
wasm-bindgen-test = "0.3.28"
